--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Kade O'Connor
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : https://i.imgur.com/qQFH2gn.jpg
   behance           : kade
 # dribbble          : your_username
   email             : kade@kadeoconnor.com
@@ -40,7 +40,7 @@ author:
 # twitch            : your_username
 # twitter           : your_username
 # vimeo             : your_username
-# youtube           : your_channel_name
+# youtube           : @KadeOConnor
 # keybase           : your_username
 
 
