--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author:
 # twitch            : your_username
 # twitter           : your_username
 # vimeo             : your_username
-# youtube           : @KadeOConnor
+ youtube           : @KadeOConnor
 # keybase           : your_username
 
 
