--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   email             : kade@kadeoconnor.com
   facebook          : Ronnoco
   github            : kadeocon
-# gitlab            : your_username
+  gitlab            : kadeocon
 # instagram         : your_username
 # kaggle            : your_username
   linkedin          : kadeo
